2012-06-06  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/x86_64/fpu/bits/fenv.h (feraiseexcept): Check
	__SSE_MATH__.

2012-06-06  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #14134]
	* iconvdata/ibm930.c (BODY) [FROM_LOOP]: Check for invalid
	character 0xffff that matches the last element of the
	conversion table.

2012-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/e_fmodl.c: Fix for wrong ldbl128-ibm
	fmodl commit.

2012-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/s_erfl.c: Fix spurious underflow for
	values higher than 25.6283.

2012-06-04  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/ldbl-128ibm/e_fmodl.c (__ieee754_fmodl): Fix
	subnormal exponent extraction and add some __builtin_expect.
	* sysdeps/ieee754/ldbl-128ibm/math_ldbl.h (ldbl_extract_mantissa):
	Fix for subnormal mantissa calculation.

2012-06-04  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/unix/sysv/linux/tst-getcpu.c (do_test): Call perror when
	cpu2 is -1 and errno is not ENOSYS.

2012-06-04  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #14117]
	* sysdeps/i386/i486/bits/string.h: Renamed to ...
	* sysdeps/x86/bits/string.h: This.
	* sysdeps/x86_64/bits/string.h: Removed.

	* sysdeps/i386/i486/bits/string.h: Define inline functions only
	if not compiling for x86-64, but compiling for >= i486.

	* sysdeps/unix/sysv/linux/x86_64/bits/sigcontext.h: Renamed to ...
	* sysdeps/unix/sysv/linux/x86/bits/sigcontext.h: This.

	* sysdeps/unix/sysv/linux/x86_64/bits/sigcontext.h (FP_XSTATE_MAGIC1):
	New macro from Linux kernel 3.4.0.
	(FP_XSTATE_MAGIC2): Likewise.
	(FP_XSTATE_MAGIC2_SIZE): Likewise.
	(X86_FXSR_MAGIC): New macro from Linux i386 kernel.
	(struct _fpx_sw_bytes): New struct.
	(struct _xsave_hdr): Likewise.
	(struct _ymmh_state): Likewise.
	(struct _xstate): Likewise.

	* sysdeps/unix/sysv/linux/i386/sys/debugreg.h: Removed.